# LogGrid

./: CMakeLists.txt  README.md
NetClient/: CMakeLists.txt
NetClient/src/: FileProcessor.hpp  ThreadPool.hpp  WorkerClient.cpp  WorkerClient.hpp  main.cpp
NetCommon/: CMakeLists.txt
NetCommon/include/: LogSearchCommon.hpp  net_client.hpp  net_common.hpp  net_connection.hpp  net_message.hpp  net_server.hpp  net_tsqueue.hpp  olc_net.hpp
NetServer/: CMakeLists.txt
NetServer/src/: MasterServer.cpp  MasterServer.hpp  main.cpp
